cabal-version:      2.4
name:               coroutine-state-machines
version:            0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Stevan Andjelkovic
maintainer:         stevana@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  LICENSE

library
  exposed-modules:
    AwaitingClients
    Codec
    Coroutine
    Event
    EventLoop
    EventQueue
    FileSystem
    HttpServer
    KeyValueApp
    KeyValueClient
    StateMachine
    Suspension

  build-depends:
    , async
    , base          ^>=4.15.1.0
    , bytestring
    , containers
    , http-client
    , http-types
    , mtl
    , stm
    , transformers
    , wai
    , warp

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , async
    , base
    , containers
    , coroutine-state-machines
    , QuickCheck
    , random
    , stm
    , tasty
    , tasty-quickcheck

executable app
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , base
    , coroutine-state-machines
